[package]
name = "test-aob-v4"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_aob_v4"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
bonfida-utils = "0.2.11"
bytemuck = "1.7"
agnostic-orderbook = {git = "https://github.com/Bonfida/agnostic-orderbook.git", features = ["lib", "utils"]}
#agnostic-orderbook = {path = "../../../agnostic-orderbook/program", features = ["lib", "utils"]}